Spark refactor. Ready for submission

--- a/PySpark/KMeans/kmeans_PySpark.ipynb
+++ b/PySpark/KMeans/kmeans_PySpark.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 149,
    "id": "bbbadf1b-1ae8-47ac-8903-cb09432d593b",
    "metadata": {},
    "outputs": [],
@@ -10,8 +10,8 @@
     "# 1. Initialize Spark related\n",
     "import pyspark\n",
     "from pyspark.sql import SparkSession\n",
-    "from PySpark_utils import *\n",
     "from tqdm import tqdm\n",
+    "import matplotlib.pyplot as plt\n",
     "\n",
     "spark = SparkSession.builder.master(\"local[4]\") \\\n",
     "    .appName('PySparkKMeansApp') \\\n",
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 142,
    "id": "ffb43257-7c5d-4431-b089-a2a1cc545a3a",
    "metadata": {},
    "outputs": [],
@@ -31,22 +31,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 143,
+   "id": "ade31f51-e841-451f-a4f2-9ef9e12d7202",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def string_list_to_float(l):\n",
+    "    \"\"\"\n",
+    "    [['0', '0.64'] ['0.21', '0.28']] to [[0, 0.64], [0.21, 0.28]]\n",
+    "    l: ['0', '0.64']\n",
+    "    \"\"\"\n",
+    "    return list(map(lambda w: float(w), l))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 144,
    "id": "e4016516-7631-4978-95fe-97a0854df1a1",
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
     "# Data\n",
     "\n",
     "X_df = spark.read.text(\"../hw2-bundle/kmeans/data/data.txt\")\n",
     "X_rdd = X_df.rdd.map(lambda l: l[0])  # This will take the first value of each rowData, in our case, the string line\n",
     "X_rdd = X_rdd.map(lambda l: l.split(' '))\n",
-    "X_rdd = X_rdd.map(lambda l: string_list_to_float(l)).cache()\n"
+    "X_rdd = X_rdd.map(lambda l: string_list_to_float(l)).cache()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 145,
    "id": "d91af776-d182-4ae1-b2cd-174c553de8fb",
    "metadata": {},
    "outputs": [],
@@ -70,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 146,
    "id": "fa29f4b5-3342-46b8-b4b0-f314ed2abcee",
    "metadata": {},
    "outputs": [
@@ -78,7 +94,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|█████████████████████████████████████████████████████████████████████████████████████████████| 20/20 [00:25<00:00,  1.25s/it]\n"
+      "100%|█████████████████████████████████████████████████████████████████████████████████████████████| 20/20 [00:24<00:00,  1.21s/it]\n"
      ]
     }
    ],
@@ -147,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 147,
    "id": "2b08ecf0-c3e9-4cc3-b4cd-4b327ef3435c",
    "metadata": {},
    "outputs": [
@@ -167,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 148,
    "id": "9cef6494-85cc-400e-8644-d36130ee80a4",
    "metadata": {},
    "outputs": [],
@@ -191,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": null,
    "id": "119b4782-0f6c-4d79-ac90-b743de5cd54f",
    "metadata": {},
    "outputs": [],
